[package]
name = "threaded_logger"
version = "0.1.0"
authors = ["Youngchan Lee <youngchan1115@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An asynchronous logger wrapper"
repository = "https://github.com/edwardycl/threaded_logger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
log = { version = "0.4.14", features = ["std"] }
once_cell = "1.7.2"
tokio = { version = "1.6.0", features = ["rt"] }

[dev-dependencies]
env_logger = "0.8.3"
tokio = { version = "1.6.0", features = ["rt", "macros"] }
